@@ -25,6 +25,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
@@ -100,8 +101,7 @@ public class FIEServlet extends HttpServlet implements FIEService {
 		    Integer userId = AonServletUtils.getUserID(connection, userLogin, domainId, parentDomainId);
 		    
 		    Certificate certificate = AON.getCertificate(domainName, domainId, userLogin, userId, "TGSS");
-		    List<CCCInfo> cccs = PAYROLL.getCCCStream(domainName, domainId, userLogin).toList();
-		    
+		    List<CCCInfo> cccs = PAYROLL.getCCCStream(domainName, domainId, userLogin).collect(Collectors.toList());		    
 		    List<Integer> itIds = new ArrayList<Integer>();
 
 		    for (CCCInfo ccc : cccs) {
@@ -430,7 +430,7 @@ public class FIEServlet extends HttpServlet implements FIEService {
 			// P=consulta la Dirección Provincial del INSS
 			switch (deficiencyIndicator) {
 			case "N":
-				it.setContingency(ContractLeaveType.ENFERMEDAD_COMUN_CARENCIA);
+				if(it.getContingency().equals(ContractLeaveType.ENFERMEDAD_COMUN)) it.setContingency(ContractLeaveType.ENFERMEDAD_COMUN_CARENCIA);
 				break;
 			default:
 				break;
@@ -714,11 +714,13 @@ public class FIEServlet extends HttpServlet implements FIEService {
 				.innerJoin(PERSON).on(PERSON.REGISTRY.eq(REGISTRY.ID))
 				.innerJoin(CONTRACT).on(CONTRACT.PERSON.eq(PERSON.REGISTRY))
 				.innerJoin(ENTERPRISE_CCC).onKey()
+				.innerJoin(DOMAIN).on(DOMAIN.ID.eq(REGISTRY.DOMAIN))
 				.where(ENTERPRISE_CCC.DOMAIN.eq(domainId))
 				.and(ENTERPRISE_CCC.CCC.eq(it.getCcc()))
 				.and(PERSON.SOCIAL_SECURITY_NUM.eq(it.getNaf()))
 				.and(CONTRACT.START_DATE.le(itStartDate))
 				.and(CONTRACT.END_DATE.isNull().or(CONTRACT.END_DATE.ge(itStartDate)))
+				.and(DOMAIN.ACTIVE.eq((byte)1))
 				.orderBy(CONTRACT.ID.desc())
 				.fetchOptionalInto(CONTRACT)
 				.orElseThrow(() -> new EmployeeNotFoundexception() );
